<resources>
    <string name="app_name">AdvancedAndroidHelper</string>
    <string name="grid_profile_and_settings">profile and settings</string>
    <string name="grid_location_and_room_setup">location and room setup</string>
    <string name="grid_scenes_and_automation">scenes and automation</string>
    <string name="grid_person_connect">connect with a real person via \n chat, voice or video call</string>
    <string name="grid_connect">connect</string>
    <string name="grid_product">product</string>
    <string name="grid_install">install</string>
    <string name="login_adv_create_account">Create Account</string>
    <string name="login_adv_login">Login</string>
    <string name="login_forget_keyword">forget password</string>
    <string name="click_me">Love me ,kiss me</string>
    <string name="anim_change_alpha">Alpha ViewProperty</string>
    <string name="anim_change_scale">Scale</string>
    <string name="anim_translate">Translate</string>
    <string name="anim_mix">MIX</string>
    <string name="anim_circle">Circle</string>
    <string name="anim_circle_text">CircleText</string>
    <string name="anim_circle_mix">CircleMix</string>
    <string name="click_event">Click to test</string>
    <string name="navigation_view">Navigation View</string>

    <string name="ka_device_list">设备列表</string>
    <string name="ka_add_device">添加设备</string>
    <string name="ka_device_share">设备分享</string>
    <string name="ka_user_faq">使用反馈</string>
    <string name="ka_account_set">账号设置</string>
    <string name="ka_third_use">连接第三方说明</string>
    <string name="ka_help">帮助</string>

    <string name="facebook_key">538061523610354</string>
</resources>
