<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clt_prof"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <LinearLayout
                    android:id="@+id/llt_close"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_person_close"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:src="@drawable/adv_close" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/grid_profile_and_settings"
                    android:textColor="#3D3935"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />


            </android.support.constraint.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D9D9D6" />

            <LinearLayout
                android:id="@+id/llt_loc_room"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="17dp"
                    android:gravity="center_vertical"
                    android:text="@string/grid_location_and_room_setup"
                    android:textColor="#3D3935"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D9D9D6" />

            <LinearLayout
                android:id="@+id/llt_scenes"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="17dp"
                    android:gravity="center_vertical"
                    android:text="@string/grid_scenes_and_automation"
                    android:textColor="#3D3935"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D9D9D6" />

            <LinearLayout
                android:id="@+id/llt_im"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@drawable/adv_connect_bg"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_connect"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/personal_blue_radius"
                    android:gravity="center"
                    android:text="@string/grid_connect"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D9D9D6" />

            <LinearLayout
                android:id="@+id/llt_install"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@drawable/adv_install"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_install"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/personal_blue_radius"
                    android:gravity="center"
                    android:text="@string/grid_install"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D9D9D6" />


            <LinearLayout
                android:id="@+id/llt_product"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/personal_expand_your_grid"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_product"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="17dp"
                    android:layout_marginTop="123dp"
                    android:background="@drawable/personal_blue_radius"
                    android:gravity="center"
                    android:text="@string/grid_product"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D9D9D6" />

            <LinearLayout
                android:id="@+id/llt_banner"
                android:background="@drawable/adv_promo_offer"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>




</LinearLayout>